hphp/hack/test/typecheck/classname/switch.php.new_exhaustivity.exp
ERROR: File "switch.php", line 9, characters 3-339:
This `switch` case cannot be checked for exhaustivity. Please provide a default. Without a default, when none of the cases match, a runtime exception will be thrown. (Typing[4489])
  File "switch.php", line 9, characters 11-14:
  The scrutinee has type `classname<C>` which is not an enum, enum class, enum class label, null, or nullable or tuples of those types.
